--- a/tickevents-placeholder/src/app/app.component.html
+++ b/tickevents-placeholder/src/app/app.component.html
@@ -1,17 +1,32 @@
 <div class="container-fluid p-0 h-100vh">
   <div class="row svg-header no-gutters">
-    <div class="col">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#ffad94" fill-opacity="1"
-          d="M0,256L30,245.3C60,235,120,213,180,186.7C240,160,300,128,360,112C420,96,480,96,540,133.3C600,171,660,245,720,240C780,235,840,149,900,138.7C960,128,1020,192,1080,229.3C1140,267,1200,277,1260,277.3C1320,277,1380,267,1410,261.3L1440,256L1440,0L1410,0C1380,0,1320,0,1260,0C1200,0,1140,0,1080,0C1020,0,960,0,900,0C840,0,780,0,720,0C660,0,600,0,540,0C480,0,420,0,360,0C300,0,240,0,180,0C120,0,60,0,30,0L0,0Z">
+    <div class="col ">
+
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" preserveAspectRatio="none" class="svg svg-1">
+        <path fill="#fcd5ce" fill-opacity="0.6"
+          d="M0,160L48,176C96,192,192,224,288,213.3C384,203,480,149,576,154.7C672,160,768,224,864,229.3C960,235,1056,181,1152,144C1248,107,1344,85,1392,74.7L1440,64L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
         </path>
       </svg>
+
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" preserveAspectRatio="none" class="svg svg-2">
+        <path fill="#ffb5a7" fill-opacity="0.6"
+          d="M0,160L40,160C80,160,160,160,240,144C320,128,400,96,480,106.7C560,117,640,171,720,170.7C800,171,880,117,960,106.7C1040,96,1120,128,1200,149.3C1280,171,1360,181,1400,186.7L1440,192L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z">
+        </path>
+      </svg>
+
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" preserveAspectRatio="none" class="svg svg-3">
+        <path fill="#ffb5a7" fill-opacity="0.6"
+          d="M0,192L26.7,208C53.3,224,107,256,160,250.7C213.3,245,267,203,320,160C373.3,117,427,75,480,64C533.3,53,587,75,640,112C693.3,149,747,203,800,229.3C853.3,256,907,256,960,240C1013.3,224,1067,192,1120,181.3C1173.3,171,1227,181,1280,192C1333.3,203,1387,213,1413,218.7L1440,224L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z">
+        </path>
+      </svg>
+
     </div>
   </div>
   <div class="row body align-content-center h-100 no-gutters">
     <div class="col h-auto p-0">
       <img src="../assets/Full Logo Salmon Transparent.png" alt="Tickevents" class="w-100 my-auto p-0">
-      <h1 class="text-center lead px-5">Online ticketverkoop met directe uitbetaling en flexibele servicekosten. Dat is Tickevents.</h1>
+      <h1 class="text-center lead px-5">Online ticketverkoop met directe uitbetaling en flexibele servicekosten. Dat is
+        Tickevents.</h1>
     </div>
   </div>
 </div>
