Added Work In Progress ribbon

--- a/tickevents-placeholder/src/app/app.component.html
+++ b/tickevents-placeholder/src/app/app.component.html
@@ -22,12 +22,19 @@
 
     </div>
   </div>
-  <div class="row body align-content-center h-100 no-gutters">
-    <div class="col h-auto p-0">
+  <div class="row body align-content-center h-100 no-gutters justify-content-center">
+    <div class="col-11 col-sm-10 col-md-9 col-lg-8 col-xl-7 h-auto p-0">
+
       <img src="../assets/Full Logo Salmon Transparent.png" alt="Tickevents" class="w-100 my-auto p-0">
       <h1 class="text-center lead px-5">Online ticketverkoop met directe uitbetaling en flexibele servicekosten. Dat is
         Tickevents.</h1>
+
     </div>
+  </div>
+</div>
+<div class="corner-ribbon top-left sticky red shadow">
+  <div class="heartbeat">
+    Work in Progress!
   </div>
 </div>
 
