--- a/tickevents-placeholder/src/app/app.component.html
+++ b/tickevents-placeholder/src/app/app.component.html
@@ -1,31 +1,18 @@
-<div class="container-fluid p-0 h-100vh">
+<div class="container-fluid p-0 h-100vh w">
   <div class="row svg-header no-gutters">
-    <div class="col ">
+    <div class="col bg-1">
 
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" preserveAspectRatio="none" class="svg svg-1">
-        <path fill="#fcd5ce" fill-opacity="0.6"
-          d="M0,160L48,176C96,192,192,224,288,213.3C384,203,480,149,576,154.7C672,160,768,224,864,229.3C960,235,1056,181,1152,144C1248,107,1344,85,1392,74.7L1440,64L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
-        </path>
+    </div>
+    <div class="col bg-2">
+      <svg viewBox="0 0 88 1024" orientation="vertical" class="svg-divider">
+        <path d="M0,0h45.07891c58.40593,190.38815,58.40593,361.05481,0,512s-58.40593,321.61188,0,512H0V0z"></path>
       </svg>
-
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" preserveAspectRatio="none" class="svg svg-2">
-        <path fill="#ffb5a7" fill-opacity="0.6"
-          d="M0,160L40,160C80,160,160,160,240,144C320,128,400,96,480,106.7C560,117,640,171,720,170.7C800,171,880,117,960,106.7C1040,96,1120,128,1200,149.3C1280,171,1360,181,1400,186.7L1440,192L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z">
-        </path>
-      </svg>
-
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" preserveAspectRatio="none" class="svg svg-3">
-        <path fill="#ffb5a7" fill-opacity="0.6"
-          d="M0,192L26.7,208C53.3,224,107,256,160,250.7C213.3,245,267,203,320,160C373.3,117,427,75,480,64C533.3,53,587,75,640,112C693.3,149,747,203,800,229.3C853.3,256,907,256,960,240C1013.3,224,1067,192,1120,181.3C1173.3,171,1227,181,1280,192C1333.3,203,1387,213,1413,218.7L1440,224L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z">
-        </path>
-      </svg>
-
     </div>
   </div>
   <div class="row body content h-100 no-gutters justify-content-center">
     <div class="col-11 col-sm-10 col-md-9 col-lg-8 col-xl-7 h-auto p-0">
 
-      <img src="../assets/Full Logo Salmon Transparent.png" alt="Tickevents" class="w-100 my-auto p-0">
+      <img src="../assets/Full Logo White Transparent.png" alt="Tickevents" class="w-100 my-auto p-0">
       <p class="text-center subtitle fs-xxl">Online ticketverkoop met directe uitbetaling en flexibele
         servicekosten. <br>Dat is
         Tickevents.</p>
