--- a/tickevents-placeholder/src/app/app.component.html
+++ b/tickevents-placeholder/src/app/app.component.html
@@ -1,8 +1,6 @@
 <div class="container-fluid p-0 h-100vh w">
   <div class="row svg-header no-gutters">
-    <div class="col bg-1">
-
-    </div>
+    <div class="col bg-1"></div>
     <div class="col bg-2">
       <svg viewBox="0 0 88 1024" orientation="vertical" class="svg-divider">
         <path d="M0,0h45.07891c58.40593,190.38815,58.40593,361.05481,0,512s-58.40593,321.61188,0,512H0V0z"></path>
@@ -11,8 +9,9 @@
   </div>
   <div class="row body content h-100 no-gutters justify-content-center">
     <div class="col-11 col-sm-10 col-md-9 col-lg-8 col-xl-7 h-auto p-0">
+      <h1 class="tickevents text-center">Tickevents</h1>
 
-      <img src="../assets/Full Logo White Transparent.png" alt="Tickevents" class="w-100 my-auto p-0">
+      <!-- <img src="../assets/Full Logo White Transparent.png" alt="Tickevents" class="w-100 my-auto p-0"> -->
       <p class="text-center subtitle fs-xxl">Online ticketverkoop met directe uitbetaling en flexibele
         servicekosten. <br>Dat is
         Tickevents.</p>
