--- a/tickevents-placeholder/src/app/app.component.css
+++ b/tickevents-placeholder/src/app/app.component.css
@@ -142,7 +142,7 @@
 }
 
 .content {
-  padding-top: 30vh
+  padding-top: 5vh
 }
 
 .svg-divider {
@@ -162,8 +162,54 @@
   background: linear-gradient(90deg, #EA8585, #ED9696);
 }
 
-.tickevents {
+/* .tickevents {
+  animation: fadeIn 2s;
+} */
+
+.tickevents-title {
   font-family: arkhip;
-  font-size: 10rem;
+  font-size: 15vw;
   font-weight: bolder;
+}
+
+.logo {
+  width: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+@media (min-width: 425px) {
+  .logo {
+    width: 250px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .tickevents-title {
+    font-size: 180px;
+  }
+}
+
+.btn {
+  background-color: #5D9881;
+  color: white;
+  transition-duration: 0s;
+  border-radius: 10px;
+  height: 50px;
+  padding: 8px;
+  box-shadow: 0 5px #9AC1B2;
+}
+
+.btn:hover {
+  background-color: #467261;
+  transition-duration: 0s;
+}
+
+.btn:active {
+  background-color: #467261;
+  box-shadow: 0 3px #294F53;
+  transform: translateY(4px); 
+  transition-duration: 0s;
+  height: 50px;
 }
