--- a/tickevents-placeholder/src/custom.css
+++ b/tickevents-placeholder/src/custom.css
@@ -14,6 +14,8 @@ Place your color classes here if you need to use them more than once.
 .r { color: red; }
 .gr { color: grey; }
 
+.blue { color: #092134}
+
 .color-gradient-light { color: #5EFCE8;}
 .color-gradient-dark { color: #736EFE;}
 
@@ -24,7 +26,8 @@ Place your color classes here if you need to use them more than once.
 .ft-raleway { font-family: 'Raleway', sans-serif; }
 .ft-poppins { font-family: 'Poppins', sans-serif; }
 .ft-open-sans { font-family: 'Open Sans', sans-serif; }
-.ft-rowdies { font-family: 'Rowdies', cursive; }
+.ft-rowdies { font-family: 'Rowdies', cursive; }  
+.ft-alata { font-family: 'Alata', sans-serif; }
 
 
 
@@ -65,6 +68,21 @@ Place your size classes here if you need to use them more than once.
 .h-90vh { height: 90vh !important}
 .h-100vh { height: 100vh !important}
 
+.h-10 { height: 10% !important}
+.h-20 { height: 20% !important}
+.h-25 { height: 25% !important}
+.h-30 { height: 30% !important}
+.h-33 { height: 33% !important}
+.h-40 { height: 40% !important}
+.h-50 { height: 50% !important}
+.h-60 { height: 60% !important}
+.h-66 { height: 66% !important}
+.h-70 { height: 70% !important}
+.h-75 { height: 75% !important}
+.h-80 { height: 80% !important}
+.h-90 { height: 90% !important}
+.h-100 { height: 100% !important}
+
 /* Min height */
 .mnh-10vh { min-height: 10vh !important}
 .mnh-20vh { min-height: 20vh !important}
@@ -80,6 +98,21 @@ Place your size classes here if you need to use them more than once.
 .mnh-80vh { min-height: 80vh !important}
 .mnh-90vh { min-height: 90vh !important}
 .mnh-100vh { min-height: 100vh !important}
+
+.mnh-10 { min-height: 10% !important}
+.mnh-20 { min-height: 20% !important}
+.mnh-25 { min-height: 25% !important}
+.mnh-30 { min-height: 30% !important}
+.mnh-33 { min-height: 33% !important}
+.mnh-40 { min-height: 40% !important}
+.mnh-50 { min-height: 50% !important}
+.mnh-60 { min-height: 60% !important}
+.mnh-66 { min-height: 66% !important}
+.mnh-70 { min-height: 70% !important}
+.mnh-75 { min-height: 75% !important}
+.mnh-80 { min-height: 80% !important}
+.mnh-90 { min-height: 90% !important}
+.mnh-100 { min-height: 100% !important}
 
 /* Max height */
 .mxh-10vh { max-height: 10vh !important}
@@ -97,6 +130,21 @@ Place your size classes here if you need to use them more than once.
 .mxh-90vh { max-height: 90vh !important}
 .mxh-100vh { max-height: 100vh !important}
 
+.mxh-10 { max-height: 10% !important}
+.mxh-20 { max-height: 20% !important}
+.mxh-25 { max-height: 25% !important}
+.mxh-30 { max-height: 30% !important}
+.mxh-33 { max-height: 33% !important}
+.mxh-40 { max-height: 40% !important}
+.mxh-50 { max-height: 50% !important}
+.mxh-60 { max-height: 60% !important}
+.mxh-66 { max-height: 66% !important}
+.mxh-70 { max-height: 70% !important}
+.mxh-75 { max-height: 75% !important}
+.mxh-80 { max-height: 80% !important}
+.mxh-90 { max-height: 90% !important}
+.mxh-100 { max-height: 100% !important}
+
 /* Width */
 .w-10vw { width: 10vw !important}
 .w-20vw { width: 20vw !important}
@@ -112,6 +160,21 @@ Place your size classes here if you need to use them more than once.
 .w-80vw { width: 80vw !important}
 .w-90vw { width: 90vw !important}
 .w-100vw { width: 100vw !important}
+
+.w-10 { width: 10% !important}
+.w-20 { width: 20% !important}
+.w-25 { width: 25% !important}
+.w-30 { width: 30% !important}
+.w-33 { width: 33% !important}
+.w-40 { width: 40% !important}
+.w-50 { width: 50% !important}
+.w-60 { width: 60% !important}
+.w-66 { width: 66% !important}
+.w-70 { width: 70% !important}
+.w-75 { width: 75% !important}
+.w-80 { width: 80% !important}
+.w-90 { width: 90% !important}
+.w-100 { width: 100% !important}
 
 /* Min width */
 .mnw-10vw { min-width: 10vw !important}
@@ -129,6 +192,21 @@ Place your size classes here if you need to use them more than once.
 .mnw-90vw { min-width: 90vw !important}
 .mnw-100vw { min-width: 100vw !important}
 
+.mnw-10 { min-width: 10% !important}
+.mnw-20 { min-width: 20% !important}
+.mnw-25 { min-width: 25% !important}
+.mnw-30 { min-width: 30% !important}
+.mnw-33 { min-width: 33% !important}
+.mnw-40 { min-width: 40% !important}
+.mnw-50 { min-width: 50% !important}
+.mnw-60 { min-width: 60% !important}
+.mnw-66 { min-width: 66% !important}
+.mnw-70 { min-width: 70% !important}
+.mnw-75 { min-width: 75% !important}
+.mnw-80 { min-width: 80% !important}
+.mnw-90 { min-width: 90% !important}
+.mnw-100 { min-width: 100% !important}
+
 /* Max width */
 .mxw-10vw { max-width: 10vw !important}
 .mxw-20vw { max-width: 20vw !important}
@@ -145,6 +223,21 @@ Place your size classes here if you need to use them more than once.
 .mxw-90vw { max-width: 90vw !important}
 .mxw-100vw { max-width: 100vw !important}
 
+.mxw-10 { max-width: 10% !important}
+.mxw-20 { max-width: 20% !important}
+.mxw-25 { max-width: 25% !important}
+.mxw-30 { max-width: 30% !important}
+.mxw-33 { max-width: 33% !important}
+.mxw-40 { max-width: 40% !important}
+.mxw-50 { max-width: 50% !important}
+.mxw-60 { max-width: 60% !important}
+.mxw-66 { max-width: 66% !important}
+.mxw-70 { max-width: 70% !important}
+.mxw-75 { max-width: 75% !important}
+.mxw-80 { max-width: 80% !important}
+.mxw-90 { max-width: 90% !important}
+.mxw-100 { max-width: 100% !important}
+
 .ft-1  {font-size: 1em;}
 .ft-15 {font-size: 1.5em;}
 .ft-2  {font-size: 2em;}
@@ -155,36 +248,3 @@ Place your size classes here if you need to use them more than once.
 /* Header */
 .header-compensation { margin-top: -56px !important; }
 .header-padding { padding-top: 56px !important; }
-
-/* 30px padding for the footer */
-/* .footer-spacer {
-  padding-bottom: 360px !important;
-}
-
-@media screen and (min-width: 405px) {
-  .footer {
-    height: 296px !important;
-  }
-
-  .footer-spacer {
-    padding-bottom: 336px !important;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .footer {
-    height: 128px !important;
-  }
-
-  .footer-spacer {
-    padding-bottom: 158px !important;
-  }
-}
-
-Footer classes
-.footer {
-  background: linear-gradient(90deg, rgba(94,252,232,1) -100%, rgba(115,110,254,1) 100%);
-  height: 330px !important;
-  bottom: 0;
-  width: 100% !important;
-} */
