--- a/tickevents-placeholder/src/app/app.component.html
+++ b/tickevents-placeholder/src/app/app.component.html
@@ -204,13 +204,13 @@
 			<div class="row no-gutters justify-content-center mt-4"> 
 				<div class="col-3 text-center fs-xl"> 
 					<div class="wrapper text-center mb-3">
-						<span class="icon-image"><i class="far fa-envelope-open"></i><br></span>
+						<span class="icon-image"><i class="far fa-envelope-open large"></i><br></span>
 					</div>
 					info@tickevent.nl
 				</div>
 				<div class="col-3 text-center fs-xl">
 					<div class="wrapper text-center mb-3">
-						<span class="icon-image"><i class="fas fa-phone"></i><br></span>
+						<span class="icon-image"><i class="fas fa-phone large"></i><br></span>
 					</div>
 					(+31) 6 40096718
 				</div>
