--- a/tickevents-placeholder/src/app/app.component.html
+++ b/tickevents-placeholder/src/app/app.component.html
@@ -123,7 +123,71 @@
 		</div>
 	</div>
 
-	<div class="row no-gutters justify-content-center third-row py-5 mt-4">
+	<!-- Reviews section carousel -->
+	<div class="row no-gutters justify-content-center third-row py-5 mt-4 align-content-center">
+		<div class="col-12 col-sm-11 col-md-10">
+			<div id="reviewCarousel" class="carousel slide w-100" data-ride="carousel">
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<div class="w-100 d-block">
+							<h1 class="text-center mx-auto lead quote"><i>"Tickevents heeft mij een hoop zorgen en kosten
+									bespaard! De
+									oprichter komt persoonlijk langs om een bakje koffie te drinken en de plannen van je
+									workshop bespreken, om te kijken hoe we goed samen kunnen werken. Op de dag van het
+									evenement kwam hij zelfs meehelpen met scannen en ondersteunde hij waar nodig met de
+									ticketverkoop."</i></h1>
+						</div>
+						<div class="carousel-caption d-block mt-3">
+							<h5>Marlijn de Jager</h5>
+							<p>Organiseert kleine feesten in kroegen</p>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<div class="w-100 d-block">
+							<h1 class="text-center w-75 mx-auto lead quote"><i>"Top service en zeer scherpe servicekosten. Dit
+									vind je niet snel bij een grote ticketverkoper."</i></h1>
+							<div class="carousel-caption d-block mt-3">
+								<h5>Bas Maats</h5>
+								<p>Organiseert kleinschalige workshops voor projectmanagers</p>
+							</div>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<div class="w-100 d-block">
+							<h1 class="text-center w-75 mx-auto lead quote"><i>"Het is misschien een eenvoudige service zonder
+									al te veel poespas, maar wat ze meestal zeggen: 'minder is meer', en dat geldt zeker
+									voor Tickevents. Weinig servicekosten en de enorm goede en persoonlijke benadering
+									is het dubbel en dwars waard."</i></h1>
+							<div class="carousel-caption d-block mt-3">
+								<h5>Steef Reusken</h5>
+								<p>Verkoopt tickets voor zijn yogaclass</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="row no-gutters blue mt-4 justify-content-center">
+		<div class="col-8 p-0">
+			<h1><strong>Neem contact op!</strong></h1>
+			<p class="fs-xl">Interesse gekregen in wat wij doen? Neem dan contact met ons op.</p>
+			<div class="row no-gutters justify-content-center mt-4">
+				<div class="col-3 text-center fs-xl">
+					<div class="wrapper text-center mb-3">
+						<span class="icon-image"><i class="far fa-envelope-open large"></i><br></span>
+					</div>
+					info@tickevent.nl
+				</div>
+				<div class="col-3 text-center fs-xl">
+					<div class="wrapper text-center mb-3">
+						<span class="icon-image"><i class="fas fa-phone large"></i><br></span>
+					</div>
+					(+31) 6 40096718
+				</div>
+			</div>
+		</div>
 		<div class="col-8 h-auto justify-content-center">
 			<div class="mt-5">
 				<p class="text-center fs-xl">Tickevents is in ontwikkeling. Wil je op de hoogte blijven van, en
@@ -193,27 +257,6 @@
 				</ng-template>
 
 
-			</div>
-		</div>
-	</div>
-
-	<div class="row no-gutters blue mt-4 justify-content-center">
-		<div class="col-8 p-0">
-			<h1><strong>Neem contact op!</strong></h1>
-			<p class="fs-xl">Interesse gekregen in wat wij doen? Neem dan contact met ons op.</p>
-			<div class="row no-gutters justify-content-center mt-4"> 
-				<div class="col-3 text-center fs-xl"> 
-					<div class="wrapper text-center mb-3">
-						<span class="icon-image"><i class="far fa-envelope-open large"></i><br></span>
-					</div>
-					info@tickevent.nl
-				</div>
-				<div class="col-3 text-center fs-xl">
-					<div class="wrapper text-center mb-3">
-						<span class="icon-image"><i class="fas fa-phone large"></i><br></span>
-					</div>
-					(+31) 6 40096718
-				</div>
 			</div>
 		</div>
 	</div>
